welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: Missing closing brace `}' assumed here
var s=0
^Poucet:18: error: 'while' expected but '}' found.
}
^