welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var s=0
do{while(sortieTrouvee()==false){
for(i<-1 to 5 ){
 if(estSurBiscuit()==true)
 s=s+1
	avance()
}
if (s<3){
gauche()
}
else droite()	
}
while(sortieTrouvee()==true)
avance()